<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tope</string>
    <string name="action_settings">Settings</string>
    <string name="action_clients">Tope Servers</string>
    <string name="title_section1">System</string>
    <string name="title_section2">Applications</string>
    <string name="title_section3">Utils</string>
    <string name="title_button_ok">OK</string>
    <string name="title_button_execute">Execute</string>
    <string name="title_button_cancel">Cancel</string>
    <string name="title_test">Test</string>

    <!-- SERVER -->
    <string name="title_activity_clients">Tope Servers</string>
    <string name="action_clients_add">Add Server</string>
    <string name="action_clients_delete_selected">Delete Selected</string>
    <string name="action_clients_execute_on_clients">Execute</string>
    <string name="action_clients_select_all">Select All</string>
    <string name="title_client_name">Server Name</string>
    <string name="title_client_ip">IP Address</string>
    <string name="title_client_port">Host Port (optional)</string>
    <string name="title_client_mac">MAC Address (optional)</string>
    <string name="title_client_active">Active</string>
    <string name="title_client_user">Username (optional)</string>
    <string name="title_client_pass">Password (optional) </string>
    <string name="title_client_domain">Domain (optional)</string>
    <string name="client_edit_synchronize">Synchronize</string>
    <string name="client_edit_synchronize_client">Synchronize Client</string>
    <string name="client_edit_edit">Edit</string>
    <string name="client_edit_delete">Delete</string>
    <string name="client_create_ip_missing">Cannot crate host with no IP!</string>
    <string name="client_create_port_missing">Taking default port </string>
    <string name="action_clients_clean_all_actions">Clean All Actions</string>
    <string name="action_clients_backup_actions">Backup Actions</string>
    <string name="action_clients_scan_network">Scan Network</string>
    <string name="action_clients_restore_actions">Restore Actions</string>
    <string name="synch_failed">Could not synchronize client. Please check your connection.</string>
    <string name="server_execute_on_pc">Click Execute instead on the Menu or Action Bar</string>
    <string name="client_synch_could_not">Could not synchronize client. Please check your connection.</string>

    <!-- OS OPERATION -->

    <string name="title_os_command">OS Commands</string>
    <string name="os_op_shutdown">Shutdown</string>
    <string name="os_op_restart">Restart</string>
    <string name="os_op_hibernate">Hibernate</string>
    <string name="os_op_standby">Standby</string>
    <string name="os_op_logoff">Log Off</string>
    <string name="os_op_logon">Log On</string>
    <string name="os_op_lockscreen">Lock Screen</string>
    <string name="os_op_lockinput">Lock Input</string>
    <string name="os_op_unlockinput">Unlock Input</string>
    <string name="os_op_monitoron">Turn On Monitor</string>
    <string name="os_op_monitoroff">Turn Off Monitor</string>
    <string name="os_op_soundoff">Mute</string>
    <string name="os_op_soundon">Sound On</string>
    <string name="os_op_wakeOnLan">Wake On Lan</string>
    <string name="title_activity_client_add_edit">Edit Server</string>
    <string name="title_activity_parameters">Action Parameters</string>
    <string name="hello_world">Hello world!</string>

    <!-- PROG OPERATION -->

    <string name="prog_op_openBrowserWithUrl">Open Browser</string>
    <string name="prog_op_controlPowerpoint">Presenation Control</string>
    <string name="prog_op_controlVLC">VLC Control</string>

    <!-- UTIL OPERATION -->
    <string name="util_op_sendMessage">Send Message</string>
    <string name="util_op_beep">Send a Bell</string>
    <string name="util_op_textToSpeech">Send Text to Speech</string>
    <string name="util_op_readClipboard">Copy PC\'s Clipboard</string>
    <string name="util_op_writeClipboard">Paste Clipboard to PC</string>
    <string name="util_op_ping">Ping</string>
    <string name="util_op_quitTope">Quit Tope Server</string>
    <string name="util_op_shortcuts">Shortcuts</string>
    <string name="util_op_uploadFile">Upload File</string>

    <!-- ********* -->
    <!-- DIALOGS -->
    <!-- ********* -->
    <string name="dialog_text_setExecDate">Execution Date</string>
    <string name="dialog_text_setTimer">Timer</string>
    <string name="dialog_text1">Text1</string>
    <string name="dialog_text2">Text2</string>

    <!-- ********* -->
    <!-- ACTIVITES -->
    <!-- ********* -->


    <!-- PRESENTATION ACTIVITY -->
    <string name="title_activity_presenation_control">Presenation Control</string>
    <string name="title_activity_presenation_control_full_screen">Full Screen</string>
    <string name="title_activity_presenation_control_black_out">Black Out - Back</string>

    <!-- VLC ACTIVITY -->
    <string name="title_activity_vlc_control">VLC Control</string>
    <string name="title_activity_vlc_control_full_screen">Full Screen</string>
    <string name="title_activity_vlc_control_play">Play</string>
    <string name="title_activity_vlc_control_show_time">Show Time</string>

    <!-- SCAN SERVER ACTIVITY -->
    <string name="title_activity_scan_servers">Scanned Network</string>
    <string name="action_scan_add_all">Add All</string>
    <string name="action_scan_add_selected">Add Selected</string>
    <string name="action_scan_rescan">Scan Again</string>
    <string name="action_scan_ip_range">IP Address Range</string>
    <string name="action_scan_ip_range_desc">Set the ip rage you want to scan for possible online server. Default is set to you current wifi IPv4 address</string>
    <string name="action_scan_ip_reset">Reset IP Address</string>
    <string name="action_scan_ip_reset_desc">Set the filter to your current wifi IPv4 address</string>
    <string name="action_scan_port">Port</string>
    <string name="action_scan_port_desc">Which port should they try to connect</string>
    <string name="action_scan_progress_dialog_title">Scanning network</string>
    <string name="action_scan_progress_dialog_message">Please wait...</string>


    <!-- ********* -->
    <!-- OTHER -->
    <!-- ********* -->
    <string name="task_executed_sccuessfully">Task executed successfully</string>
    <string name="tag_other_empty_string">#EMPTY#</string>
    <string name="elephant_text">No Servers.\nGo through the menu to add one.</string>
    <string name="action_clients_summary">Show Tope Server list where you can add or remove new items</string>
    <string name="client_list_empty">Empty list. Add new Server?</string>
    <string name="client_list_empty_negative">Add new Server from the menu.</string>
    <string name="client_list_delete">Sure you wanna delete client?</string>
    <string name="client_list_delete_negative">Nothing happened!</string>
    <string name="toast_successful_br">[Successful]</string>
    <string name="toast_failed_br">[Failed]</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_not_found">Action Not Found.\nPlease update your Tope Server.</string>
    <string name="upload_file_too_big">File is two big!</string>

    <!-- ********* -->
    <!-- SETTINGS -->
    <!-- ********* -->

    <string name="title_activity_tope_settings">Tope Settings</string>

    <!-- Setting's titles -->
    <string name="pref_ping_clients_checkbox_description">Check the client\'s online status automatically and display it in the pager tab strip with color</string>
    <string name="pref_ping_clients_checkbox_title">Server Status Check</string>
    <string name="pref_upload_overwrite_file_description">Should the upload automatically overwrite files on destination?</string>
    <string name="pref_upload_overwrite_file_title">Overwrite Files on Upload</string>
    
    <!-- SHORTCUTS ACTIVITY -->
    <string name="title_activity_shortcuts">Shortcuts</string>
    <string name="title_activity_shortcuts_alt_f4">Shortcuts</string>


</resources>